apps/nextcloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: default
spec:
  selector:
    matchLabels:
      app: nextcloud
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: "nextcloud:latest"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-content
        - name: redis
          image: "redis:alpine"
      volumes:
        - name: nextcloud-content
          nfs:
            server: nixnas.joejad.lan
            path: /home/joejad/nextcloud
